force-app/main/default/objects/Case/fields/Estimated_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Transfer__c</fullName>
    <label>Estimated Transfer</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>