force-app/main/default/objects/Case/fields/Expected_MVR__c.field-meta.xml
<CustomField>
    <fullName>Expected_MVR__c</fullName>
    <label>Expected MVR</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>