force-app/main/default/objects/Case/fields/LOU_FDL_Receipt__c.field-meta.xml
<CustomField>
    <fullName>LOU_FDL_Receipt__c</fullName>
    <label>LOU/FDL Receipt</label>
    <type>Date</type>
</CustomField>