force-app/main/default/objects/Case/fields/Participant_Count__c.field-meta.xml
<CustomField>
    <fullName>Participant_Count__c</fullName>
    <label>Participant Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>