force-app/main/default/objects/Case/fields/Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Plan_Code__c</fullName>
    <formula>Plan__r.Plan_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Code</label>
    <type>Text</type>
</CustomField>