force-app/main/default/objects/Case/fields/Plan_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sponsor__c</fullName>
    <formula>Plan__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Sponsor</label>
    <type>Text</type>
</CustomField>