force-app/main/default/objects/Case/fields/Plan_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sub_Type__c</fullName>
    <formula>TEXT(Plan__r.Plan_Sub_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Sub-Type</label>
    <type>Text</type>
</CustomField>