force-app/main/default/objects/Case/fields/Project_Health__c.field-meta.xml
<CustomField>
    <fullName>Project_Health__c</fullName>
    <formula>IMAGE( 
CASE(Status, 
&quot;Initiate&quot; , &quot;/img/samples/flag_green.gif&quot; , 
&quot;Data Collection&quot; , &quot;/img/samples/flag_green.gif&quot;, 
&quot;Setup&quot; , &quot;/img/samples/flag_green.gif&quot;, 
&quot;Enrollment&quot; , &quot;/img/samples/flag_green.gif&quot;, 
&quot;Asset Transfer&quot; ,&quot;/img/samples/flag_green.gif&quot;, 
&quot;Handoff&quot; , &quot;/img/samples/flag_green.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Health</label>
    <type>Text</type>
</CustomField>