force-app/main/default/objects/Case/recordTypes/Project_Baseline.recordType-meta.xml
<RecordType>
    <fullName>Project_Baseline</fullName>
    <active>true</active>
    <businessProcess>Project - Standard</businessProcess>
    <description>Baseline project container modeled as Case</description>
    <label>Project - Baseline</label>
</RecordType>