force-app/main/default/objects/Case/listViews/Project_Record_Type.listView-meta.xml
<ListView>
    <fullName>Project_Record_Type</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Project_Baseline</value>
    </filters>
    <label>Project Record Type</label>
</ListView>